[workspace]
members = [
    "tailwind-ast",
    "tailwind-cli",
    "tailwind-rs",
    "tailwind-error",
    "tailwind-macro",
    "tailwind-show",
    "tailwind-css",
]
default-members = ["tailwind-cli", "tailwind-rs", "tailwind-css"]

[workspace.dependencies]
tailwind-ast = { path = "tailwind-ast" }
tailwind-cli = { path = "tailwind-cli" }
tailwind-rs = { path = "tailwind-rs" }
tailwind-error = { path = "tailwind-error" }
tailwind-macro = { path = "tailwind-macro" }
tailwind-show = { path = "tailwind-show" }
tailwind-css = { path = "tailwind-css" }


[profile.dev]
opt-level = 1
incremental = true

[profile.release]
lto = true
panic = "abort"
