[package]
name = "tailwind"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Tailwind cli in rust"
repository = "https://github.com/oovm/tailwind-rs"
documentation = "https://docs.rs/tailwind"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
clap = { version = "4.0.4", features = ["derive"] }
tailwind-rs = { workspace = true }
tailwind-error = { workspace = true }
itertools = "0.10.5"
log = "0.4.17"
glob = "0.3.0"
globset = "0.4.9"
byte-unit = "4.0.14"


[dev-dependencies]

[features]
default = ["html"]
html = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
i = "cargo install --path . --debug"
