[package]
name = "tailwind-rs"
version = "0.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Tailwind translater for html and more"
repository = "https://github.com/oovm/tailwind-rs"
documentation = "https://docs.rs/tailwind-css"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
tailwind-error = { workspace = true }
tl = { version = "0.7.7", optional = true }
tailwind-css = { workspace = true, features = ["compile_time"] }
itertools = "0.10.5"
log = "0.4.17"
xxhash-rust = "0.8.6"
lightningcss = "1.0.0-alpha.42"

[dev-dependencies]

[features]
default = ["html"]
html = ["tl", "tailwind-error/tl"]

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
